Add design-time datacontexts for all user controls - Split the ClusterSettings off into a UserControl - Fix issues with the GridSplitter

--- a/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
+++ b/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
@@ -4,8 +4,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:featureFinding="clr-namespace:MultiAlignRogue.Feature_Finding"
              d:DesignHeight="500"
              d:DesignWidth="500"
+             d:DataContext="{d:DesignInstance d:Type=featureFinding:FeatureFindingSettingsViewModel, IsDesignTimeCreatable=True}"
              mc:Ignorable="d">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis" />
