--- a/src/MultiAlignRogue/Clustering/ClusterViewerSettingsWindow.xaml
+++ b/src/MultiAlignRogue/Clustering/ClusterViewerSettingsWindow.xaml
@@ -1,10 +1,15 @@
 ﻿<Window x:Class="MultiAlignRogue.Clustering.ClusterViewerSettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:clustering="clr-namespace:MultiAlignRogue.Clustering"
         Title="Cluster Viewer Settings"
         Width="300"
-        Height="300">
+        Height="300"
+        d:DataContext="{d:DesignInstance d:Type=clustering:ClusterViewerSettingsViewModel, IsDesignTimeCreatable=True}"
+        mc:Ignorable="d">
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
