--- a/src/MultiAlignRogue/Utils/DataLoadingSettings.xaml
+++ b/src/MultiAlignRogue/Utils/DataLoadingSettings.xaml
@@ -3,7 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:utils="clr-namespace:MultiAlignRogue.Utils"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             Background="White"
+             d:DataContext="{d:DesignInstance d:Type=utils:DataLoadingSettingsViewModel,
+                                              IsDesignTimeCreatable=True}"
              d:DesignHeight="300"
              d:DesignWidth="500"
              mc:Ignorable="d">
